Compiler thread creation fails with assert(_c2_count > 0 || _c1_count > 0) failed: No compilers?

XMLWordPrintable

    • b22
    • Verified

      compiler/arguments/CheckCICompilerCount.java fails with:

      # Internal Error (open/src/hotspot/share/compiler/compileBroker.cpp:827), pid=17441, tid=17442
      # assert(_c2_count > 0 || _c1_count > 0) failed: No compilers?

      Stack: [0x00007f67217f6000,0x00007f67218f7000], sp=0x00007f67218f59d0, free space=1022k
      Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0x9dde9e] CompileBroker::init_compiler_sweeper_threads()+0x5ee
      V [libjvm.so+0x9de12d] CompileBroker::compilation_init_phase1(Thread*)+0x7d
      V [libjvm.so+0x1716636] Threads::create_vm(JavaVMInitArgs*, bool*)+0x936
      V [libjvm.so+0xf24148] JNI_CreateJavaVM+0x98
      C [libjli.so+0x40ef] JavaMain+0x7f
      C [libjli.so+0x8149] ThreadJavaMain+0x9

            Assignee:
            Igor Veresov
            Reporter:
            Tobias Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: