8233590: Compiler thread creation fails with assert(_c2_count > 0 || _c1_count > 0) failed: No compilers?

Handle the case with -XX:-TieredCompilation properly

Reviewed-by: shade, thartmann